--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -17,7 +17,8 @@
                 <input asp-for="FizzBuzz.Firstname" class="form-control" />
             </div>
             <button type="submit" class="btn btn-primary my-2">Zatwierdź</button><br><br>         
-            <span asp-validation-for="FizzBuzz.Number" class="alert alert-success"></span>
+            <span asp-validation-for="FizzBuzz.Number" class="text-success"></span><br>
+            <span asp-validation-for="FizzBuzz.Firstname" class="text-success"></span>
         </form>
     </div>
 </div>
