--- a/Pages/SavedInSession.cshtml
+++ b/Pages/SavedInSession.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>Dane w zapisane w sesji</p>
-@if (Model.FizzBuzz != null)
+@if (Model.FormDataHolder != null)
 {
-    <p>@Html.DisplayNameFor(model => Model.FizzBuzz.Number): @Model.FizzBuzz.Number </p>
+    <p>@Html.DisplayNameFor(model => Model.FormDataHolder.Number): @Model.FormDataHolder.Number </p>
 }   
